// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Notification it calls the button handler function when clicked 1`] = `
<div
  className="no-close notification--success"
>
  <div
    className={undefined}
  >
    <div
      className={undefined}
    >
      Hello There!
    </div>
    <div
      className={undefined}
    >
      <div
        className={undefined}
        onClick={[Function]}
      >
        <i
          className="fa fa-thumbs-up"
        />
        Accept
      </div>
      <div
        className={undefined}
        onClick={[Function]}
      >
        <i
          className="fa fa-thumbs-down"
        />
        Deny
      </div>
    </div>
  </div>
</div>
`;

exports[`Notification it renders a deny button with an a title and an icon className 1`] = `
<div
  className="no-close notification--success"
>
  <div
    className={undefined}
  >
    <div
      className={undefined}
    >
      Hello There!
    </div>
    <div
      className={undefined}
    >
      <div
        className={undefined}
        onClick={[Function]}
      >
        <i
          className="fa fa-thumbs-down"
        />
        Deny
      </div>
    </div>
  </div>
</div>
`;

exports[`Notification it renders a deny button without a title and an icon element  1`] = `
<div
  className="no-close notification--success"
>
  <div
    className={undefined}
  >
    <div
      className={undefined}
    >
      Hello There!
    </div>
    <div
      className={undefined}
    >
      <div
        className={undefined}
        onClick={[Function]}
      >
        <i
          className="fa fa-thumbs-down"
        />
        Deny
      </div>
    </div>
  </div>
</div>
`;

exports[`Notification it renders an accept button with an a title and an icon className and calls function on click 1`] = `
<div
  className="no-close notification--success"
>
  <div
    className={undefined}
  >
    <div
      className={undefined}
    >
      Hello There!
    </div>
    <div
      className={undefined}
    >
      <div
        className={undefined}
        onClick={[Function]}
      >
        <i
          className="fa fa-thumbs-up"
        />
        Accept
      </div>
    </div>
  </div>
</div>
`;

exports[`Notification it renders an accept button without a title and an icon element  1`] = `
<div
  className="no-close notification--success"
>
  <div
    className={undefined}
  >
    <div
      className={undefined}
    >
      Hello There!
    </div>
    <div
      className={undefined}
    >
      <div
        className={undefined}
        onClick={[Function]}
      >
        <i
          className="fa fa-thumbs-up"
        />
        Accept
      </div>
    </div>
  </div>
</div>
`;

exports[`Notification it renders when a duration is greater than 0 1`] = `
<div
  className="has-close notification--success"
>
  <div
    className={undefined}
  >
    <div
      className={undefined}
    >
      Hello There!
    </div>
  </div>
  <div
    className={undefined}
    onClick={[Function]}
  />
</div>
`;

exports[`Notification it renders with a close all button 1`] = `
<div
  className="has-close-all notification--success"
>
  <div
    className={undefined}
  >
    <div
      className={undefined}
    >
      Hello There!
    </div>
  </div>
  <div
    className={undefined}
    onClick={[Function]}
  />
  <div
    className={undefined}
    onClick={[Function]}
  >
    Close All
  </div>
</div>
`;

exports[`Notification it renders with an element for the icon when an element is passed 1`] = `
<div
  className="has-close notification--success"
>
  <span
    className={undefined}
  >
    <i
      className="fa fa-fire"
    />
  </span>
  <div
    className={undefined}
  >
    <div
      className={undefined}
    >
      Hello There!
    </div>
  </div>
  <div
    className={undefined}
    onClick={[Function]}
  />
</div>
`;

exports[`Notification it renders with an string for the icon when a string is passed 1`] = `
<div
  className="has-close notification--success"
>
  <span
    className={undefined}
  >
    ·
  </span>
  <div
    className={undefined}
  >
    <div
      className={undefined}
    >
      Hello There!
    </div>
  </div>
  <div
    className={undefined}
    onClick={[Function]}
  />
</div>
`;

exports[`Notification it renders with default props 1`] = `
<div
  className="has-close notification--success"
>
  <div
    className={undefined}
  >
    <div
      className={undefined}
    >
      Hello There!
    </div>
  </div>
  <div
    className={undefined}
    onClick={[Function]}
  />
</div>
`;

exports[`Notification renders localization custom localization text for accept and deny buttons 1`] = `
<div
  className="no-close notification--success"
>
  <div
    className={undefined}
  >
    <div
      className={undefined}
    >
      Hello There!
    </div>
    <div
      className={undefined}
    >
      <div
        className={undefined}
        onClick={[Function]}
      >
        <i
          className="fa fa-thumbs-up"
        />
        Yes
      </div>
      <div
        className={undefined}
        onClick={[Function]}
      >
        <i
          className="fa fa-thumbs-down"
        />
        No
      </div>
    </div>
  </div>
</div>
`;

exports[`Notification renders localization custom localization text if set 1`] = `
<div
  className="no-close notification--success"
>
  <div
    className={undefined}
  >
    <div
      className={undefined}
    >
      Hello There!
    </div>
  </div>
</div>
`;
